#11676: BugFix: business account general ui issue. 1. wrong flow after clicking add user button 2. MEGA icon is shown wrongly. 3. setting style alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -20810,6 +20810,9 @@ div.camera-bottom-txt {
 .lite .account.plan-info.accounttype {
     color: #ffa500;
 }
+.business.account.plan-info.accounttype {
+    color: rgba(0,191,165,1);
+}
 .account.plan-info.small {
     font-size: 14px;
 }
